# cringe_web3

./: main.py  pyproject.toml
src/controller/adapter/: base.py  http.py
src/infra/: utils.py
src/infra/adaptix/: retort.py
src/infra/models/: base.py  method.py  request.py  response.py
src/presentation/: client.py
src/presentation/models/: block_number.py
